--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/material-top-tabs": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
